--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -59,7 +59,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            docker pull irinaexcellent/api_yamdb
+            docker pull irinaexcellent/api_yamdb:latest
             sudo docker compose stop
             sudo docker compose rm web
             touch .env
