--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -42,8 +42,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          context: .
-          file: ./api_yamdb/Dockerfile
+          context: ./api_yamdb/Dockerfile
           push: true
           tags: irinaexcellent/api_yamdb:latest
   deploy:
