--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          context: ./api_yamdb
+          context: api_yamdb
           push: true
           tags: irinaexcellent/api_yamdb:latest
   deploy:
@@ -52,7 +52,7 @@ jobs:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
-          context: ./api_yamdb
+          context: api_yamdb
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
