--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -67,7 +67,8 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker compose up -d 
+            sudo docker compose up -d
+            sudo docker run --rm -d -p 5000:5000 irinaexcellent/api_yamdb 
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
